[package]
name = "switch_raffler"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "switch_raffler"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
switchboard-v2 = "0.1.14"
anchor-spl = "0.25.0"
bytemuck = "1.12.1"
